--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typecheck": "tsc -p tsconfig.json --noEmit"
   },
   "dependencies": {
+    "@microsoft/clarity": "^1.0.0",
     "@next/third-parties": "^15.5.3",
     "@number-flow/react": "^0.5.10",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
