--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-virtual": "^3.13.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "deepmerge": "^4.3.1",
     "fuse.js": "^7.1.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
