--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@t3-oss/env-nextjs": "^0.13.8",
+    "@tanstack/react-query": "^5.90.11",
     "@tanstack/react-virtual": "^3.13.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "deepmerge": "^4.3.1",
-    "dexie": "^4.2.1",
     "fuse.js": "^7.1.0",
     "lucide-react": "^0.542.0",
     "next": "16.0.5",
@@ -28,9 +28,9 @@
     "nuqs": "^2.6.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hotkeys-hook": "^5.2.1",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.8",
-    "zustand": "^5.0.8"
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
